src/objects/Home_Depot_Store__c.object
<CustomObject>
    <description>Details of the Home Depot Store selling BEHR products</description>
    <fields>
        <fullName>Behr_Store_Rep__c</fullName>
        <label>Behr Store Rep</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Store_Number_Backend__c</fullName>
        <label>HD Store Number Backend</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manual_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to indicate the assignment has been manually overridden and for CRM fusion to ignore these stores.  This will allow admins to set the store and have it stay to what they want until it can resort back to SAP&apos;s settings.</description>
        <label>Manual Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Number__c</fullName>
        <label>Market Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Division__c</fullName>
        <label>Ops Division</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_Manager__c</fullName>
        <label>Sales Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Arek Anysz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colin Woods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cris Maune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Hance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Bauman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geoffrey Timm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerald Bump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glenn Longval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Belloli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Wolf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Varney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Sorrentino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Hitchler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jordan Showers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh Richardson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Mosley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Andrews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Spooner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Furnari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Vecchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Adinolfi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramsey Carter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raymond Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Romine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rich Beak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Kracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Landtiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Rud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_VP__c</fullName>
        <label>Ops VP</label>
        <picklist>
            <picklistValues>
                <fullName>Jason Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kirk Billingsley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lance Sparkman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Tooley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Pugliese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRO_Division__c</fullName>
        <label>PRO Division</label>
        <picklist>
            <picklistValues>
                <fullName>PRO EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO WEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_Email__c</fullName>
        <description>Used to automatically update the pro rep owner based on SAP.  This field will be populated on a schedule and will then trigger the update of the owner of the store and zip code.</description>
        <label>Pro Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_ID__c</fullName>
        <description>To help with SAP to Salesforce changes on store assignments.</description>
        <label>Pro Rep ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_VP__c</fullName>
        <label>Pro VP</label>
        <picklist>
            <picklistValues>
                <fullName>Mark Faber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Waszkowski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Seidensticker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <label>RPSM</label>
        <picklist>
            <picklistValues>
                <fullName>Abe Suleiman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Mahoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandon Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Emmert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermot McGuire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Goodwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Wysor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luke Markes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Rivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spyros Zorbas</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Store_Label__c</fullName>
        <label>SAP Store Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_VP__c</fullName>
        <label>Sales VP</label>
        <picklist>
            <picklistValues>
                <fullName>Geoff Timm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Pugliese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Tooley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Rud</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Phone__c</fullName>
        <label>Store Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store_Rep_Email__c</fullName>
        <description>In Store Rep Email</description>
        <label>Store Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THD_DM__c</fullName>
        <description>Home Depot District Manager</description>
        <label>THD DM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THD_RMM__c</fullName>
        <label>THD RMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THD_Region__c</fullName>
        <label>THD Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THD_Territory__c</fullName>
        <label>THD Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>store_phone_clean__c</fullName>
        <description>store phone # without () or -</description>
        <label>store phone clean</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>THD Stores</label>
    <listViews>
        <fullName>All_Stores_created_today</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RPSM__c</columns>
        <columns>Pro_VP__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Sales_VP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>2503,2507,2577,2584,6945</value>
        </filters>
        <label>All Stores</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LA_Team_Stores</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Store_Name__c</columns>
        <columns>Market_Name__c</columns>
        <columns>Market_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>John Wysor</value>
        </filters>
        <label>LA Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West_3</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manual_Override_Stores</fullName>
        <columns>NAME</columns>
        <columns>Manual_Assignment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RPSM__c</columns>
        <columns>Pro_VP__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Sales_VP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Brian Emmert</value>
        </filters>
        <label>Manual Override Stores</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Admin</group>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mid_Atlantic_Team_Stores</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Market_Name__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Pro_VP__c</columns>
        <columns>RPSM__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Sales_VP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Brandon Jones</value>
        </filters>
        <label>Mid Atlantic Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_Mid_Atlantic</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Stores</fullName>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Forney</value>
        </filters>
        <label>My Stores</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_England_Team_Stores</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Spyros Zorbas</value>
        </filters>
        <label>New England Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_Atlantic_Team_Stores</fullName>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Market_Name__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>RPSM__c</columns>
        <columns>Pro_VP__c</columns>
        <columns>PRO_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Abe Suleiman</value>
        </filters>
        <label>North Atlantic Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_North_Atlantic</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProEast_MidWest_Stores</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Dermot McGuire</value>
        </filters>
        <label>Midwest Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East_1</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProEast_Stores</fullName>
        <columns>RPSM__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pro_VP__c</field>
            <operation>equals</operation>
            <value>Mark Faber</value>
        </filters>
        <label>Pro East Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East</role>
            <role>Behr_Pro_Rep_East_3</role>
            <role>Behr_Pro_Rep_Mid_Atlantic</role>
            <role>Behr_Pro_Rep_North_Atlantic</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProWest_Pac_North_Stores</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Luke Markes</value>
        </filters>
        <label>Pac North Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West_4</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProWest_Pac_South_Stores</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Brian Emmert</value>
        </filters>
        <label>Pac South Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProWest_South_Central</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Randy Rivers</value>
        </filters>
        <label>South Central Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West_2</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pro_Central_Stores</fullName>
        <columns>RPSM__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pro_VP__c</field>
            <operation>equals</operation>
            <value>Matt Waszkowski</value>
        </filters>
        <label>Pro Central Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East_1</role>
            <role>Behr_Pro_Rep_Southwest</role>
            <role>Behr_Pro_Rep_West_2</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pro_West_Stores</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RPSM__c</columns>
        <columns>Store_Name__c</columns>
        <columns>Market_Name__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Ops_Manager__c</columns>
        <columns>Sales_VP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pro_VP__c</field>
            <operation>equals</operation>
            <value>John Seidensticker</value>
        </filters>
        <label>Pro West Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_West</role>
            <role>Behr_Pro_Rep_West_3</role>
            <role>Behr_Pro_Rep_West_4</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>South_Atlantic_Stores</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Store_Name__c</columns>
        <columns>Store_Phone__c</columns>
        <columns>Behr_Store_Rep__c</columns>
        <columns>Market_Number__c</columns>
        <columns>Market_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPSM__c</field>
            <operation>equals</operation>
            <value>Greg Goodwin</value>
        </filters>
        <label>South Atlantic Team Stores</label>
        <language>en_US</language>
        <sharedTo>
            <role>Behr_Pro_Rep_East_3</role>
            <role>PRSVP</role>
            <role>Pro_Sales_VP_Central</role>
            <role>Pro_Sales_VP_East</role>
            <role>Pro_Sales_VP_West</role>
            <role>ROM_RPSM_East</role>
            <role>ROM_RPSM_East_2</role>
            <role>ROM_RPSM_East_3</role>
            <role>ROM_RPSM_Mid_Altantic</role>
            <role>ROM_RPSM_North_Atlantic</role>
            <role>ROM_RPSM_Southwest</role>
            <role>ROM_RPSM_West</role>
            <role>ROM_RPSM_West_2</role>
            <role>ROM_RPSM_West_3</role>
            <role>ROM_RPSM_West_4</role>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>THD Store Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>THD Stores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>